# ggml.go

./: .gitignore  LICENSE  README.md  go.mod  iface.go  types.go
examples/: main.go
examples/simple/: simple.go
libs/: .gitignore  CMakeLists.txt  backend.go  expand.c  expand.h  iface.go  lib.go  libs_linux.go  public.go  sched.go  tensors.go  types.go
src/: gguf.go  io.go
