# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

project("ggml-go" C CXX)
message("-------------${CMAKE_SOURCE_DIR}")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

set(CMAKE_BUILD_TYPE Release)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# 动态库
set(BUILD_SHARED_LIBS ON)
set(GGML_SHARED ON)
set(GGML_BACKEND_SHARED ON)
set(GGML_BACKEND_DL ON)
set(GGML_BACKEND_DIR ${CMAKE_BINARY_DIR}/bin)
set(GGML_CPU_ALL_VARIANTS ON)

# 静态库
# set(GGML_STATIC ON)

set(GGML_CCACHE OFF)

set(GGML_BUILD ON)
set(GGML_SCHED_MAX_COPIES 4)

set(GGML_CUDA ON)
set(GGML_CUDA_CUB_3DOT2 ON)
set(GGML_CUDA_PEER_MAX_BATCH_SIZE 128)
set(GGML_CUDA_GRAPHS ON)
set(GGML_CUDA_FA ON)
set(GGML_CUDA_COMPRESSION_MODE default)

set(GGML_CPU ON)

add_subdirectory(../ggml ggml)

# ggml_get_system_arch()
# set(CMAKE_CUDA_ARCHITECTURES ${GGML_SYSTEM_ARCH})